--- a/Backend/requirements.txt
+++ b/Backend/requirements.txt
@@ -3,3 +3,7 @@ uvicorn>=0.30
 pydantic>=2.8
 SQLAlchemy>=2.0
 python-dotenv==1.0.1
+requests==2.32.3
+tqdm==4.66.5
+lxml==5.3.0
+python-dateutil==2.9.0.post0
