Added a scrapper and data folders. They allow me to manually upload weekly patent data for now and display it in the front end. Will add automatic scrapping next

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-﻿.venv/
-__pycache__/
+﻿data/
+!data/.gitkeep
+backend/.venv/
+frontend/node_modules/
 *.pyc
-*.pyo
-*.pyd
+__pycache__/
 *.db
 .env
-.env.*
-.DS_Store
-Thumbs.db
+backend/.env
