changed the urls to the public cloudfare website. and changed the filter and sort features

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,2 +1,2 @@
-﻿CORS_ORIGINS=http://localhost:3000
-DATABASE_URL=sqlite:///patents.db
+﻿CORS_ORIGINS=http://localhost:3000,https://tower-growing-sarah-hopes.trycloudflare.com
+DATABASE_URL=postgresql+psycopg://neondb_owner:npg_crySo7B1zegb@ep-soft-rain-a4crqyr9-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
