added files to download data automatically

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,2 +1,2 @@
 ﻿CORS_ORIGINS=http://localhost:3000
-DATABASE_URL=sqlite:///patents.db
+DATABASE_URL=postgresql+psycopg://uwo_patents:cumbersome@127.0.0.1:5432/patents
